NewArchive/e327a6e6ccc7fa47b6c4e8d88ae2a270-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:13:27: error: invalid initialization of non-const reference of type 'char&' from an rvalue of type 'char'
     auto& ch = f(x.begin());
                           ^
